syntax = "proto3";

package auth;

// Auth Service
service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Notify (NotifyRequest) returns (NotifyResponse);
  rpc Verify (VerifyRequest) returns (VerifyResponse);
  rpc ButtonsGet (ButtonsGetRequest) returns (ButtonsGetResponse);
}

// Auth Service Messages
message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string message = 2;
}

message NotifyRequest {
  string email = 1;
  string link = 2;
}

message NotifyResponse {
  bool success = 1;
  string message = 2;
}

message VerifyRequest {
  string token = 1;
}

message VerifyResponse {
  bool success = 1;
  string message = 2;
}

message ButtonsGetRequest {}

message ButtonsGetResponse {
  repeated string buttons = 1;
} 